@@ -5,6 +5,7 @@
   * Node#serialize-and-friends now accepts a SaveOption object as the, erm, save object.
   * Nokogiri::CSS::Parser has-a Nokogiri::CSS::Tokenizer
   * [JRUBY+FFI only] Weak references are now threadsafe. #355
+  * Make direct start_element() callback (currently used for HTML::SAX::Parser) pass attributes in assoc array, just as emulated start_element() callback does.  rel. #356
 
 === 1.4.4 / 2010-11-15
 
